# MiCE

./: .gitignore  3x3matrix.py  4x4matrix.py  FutureForcing.ipynb  README.md  RoutedK.ipynb  Untitled25.ipynb  blurb.html  license.txt  model.py  pyproject.toml  rainstar32mult.cpp  visualizer.py
.github/: FUNDING.yml
dataset/: aochildes.txt  cbt.txt  children_stories.txt  switchboard.txt
torch_mice/: __init__.py  affine_norm.py  atlas_projector.py  batched_icnn.py  convex_attention.py  convex_embed.py  convex_gate.py  convex_hash.py  convexprojection.py  positive_linear.py  vector_hull.py
