[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "torch-mice"
version = "0.1.0"
description = "Mixture of Convex Experts (MiCE) for PyTorch"
readme = "README.md"
license = { file = "LICENSE.txt" }
authors = [
  { name="Joshuah Rainstar", email="Joshuah.Rainstar@gmail.com" }
]
dependencies = [
  "torch>=1.8.0"
]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: Other/Gratis License",
  "Operating System :: OS Independent"
]
homepage = "https://github.com/falseywinchnet/MiCE"
repository = "https://github.com/falseywinchnet/MiCE"
