[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"
[project]
name = "torch-mice"
version = "0.1.0"
description = "Mixture of Convex Experts (MiCE) for PyTorch"
readme = "README.md"
readme-content-type = "text/markdown"
license = { file = "LICENSE.txt" }
authors = [
  { name="Joshuah Rainstar", email="Joshuah.Rainstar@gmail.com" }
]
keywords = ["convex", "mixture-of-experts", "pytorch", "icnn", "machine-learning"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: Other/Gratis License",
  "Operating System :: OS Independent"
]
dependencies = [
  "torch>=1.8.0"
]
python-requires = ">=3.7"
homepage = "https://github.com/falseywinchnet/MiCE"
repository = "https://github.com/falseywinchnet/MiCE"
